=== GDL 0.5.0 ===

2005-03-14  Naba Kumar  <naba@gnome.org>

	* configure.in, NEWS: Bumpped version to 0.5.0 and prepared for
	release.

	* gdl/Makefile.am: Added image_DATA in EXTRA_DIST.
	
2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-08  Naba Kumar  <naba@gnome.org>

	* configure.in, Makefile.am: Disabling symbol-browser build as it
	has been deprecated. Eventually, it will be removed.

	Patch from: Pierre Sarrazin  <sarrazip@sarrazip.com>
	* gdl.spec.in: Updated and fixed rpm spec file.
	
	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-item.c: Fixed to enable hide/show of GdlDockItem
	to be detected. Bug #143471.
	
	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-item-grip.c, gdl/gdl-dock-item.[ch],
	gdl/gdl-dock-master.c: The attached patch modifies the behaviour
	of GdlDockItem/GdlDockItemGrip so that even when locked the grip
	bar is always displayed. To allow items to not have a grip bar
	at all a new behaviour is also added, GDL_DOCK_ITEM_BEH_NO_GRIP,
	as the locked status can no longer be used for this. Bug #143475
	
	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-bar.[ch]: Added orientation get/set functions
	to allow for horizontal/vertical layout -- bug #155339

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-11-04	Amanpreet Singh Alam <aalam@redhat.com>
	
	* configure.in: pa is added to ALL_LINGUAS

2004-04-02  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-10 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added "ga" to ALL_LINGUAS.

2004-03-05  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdl/Makefile.am: Don't install gdl-dock-item-grip.h
	
	* gdl/gdl-dock-bar.c (gdl_dock_bar_instance_init)
	(gdl_dock_bar_destroy, gdl_dock_bar_add_item): Fix memory and
	tooltip object leaks.
	
	* gdl/gdl-dock-item-grip.h: