@@ -54,202 +54,6 @@ AC_PROG_CC
 AC_CHECK_HEADERS([libintl.h])
 AC_TYPE_SIGNAL
 
-dnl =====================================================================
-dnl ======== Ctags stuffs below =========================================
-
-dnl Define convenience macros
-dnl -------------------------
-dnl CHECK_HEADER_DEFINE(LABEL, HEADER [,ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND ] ])
-AC_DEFUN(CHECK_HEADER_DEFINE,
-[
-	AC_MSG_CHECKING(if $1 is defined in $2)
-	AC_EGREP_CPP(yes,
-[#include <$2>
-#ifdef $1
-  yes
-#endif
-], [
-	AC_MSG_RESULT(yes)
-	$3
-], [
-	AC_MSG_RESULT(no)
-	$4
-]) ])
-
-AC_ISC_POSIX
-AM_PROG_CC_STDC
-AC_HEADER_STDC
-
-dnl Check for glib.
-PKG_CHECK_MODULES(GLIB, glib-2.0)
-AC_SUBST(GLIB_LIBS)
-AC_SUBST(GLIB_CFLAGS)
-
-dnl Check for other things
-AC_CHECK_HEADERS(dirent.h fcntl.h fnmatch.h stat.h stdlib.h string.h)
-AC_CHECK_HEADERS(time.h types.h unistd.h)
-AC_CHECK_HEADERS(sys/dir.h sys/stat.h sys/times.h sys/types.h)
-
-dnl Checks for typedefs, structures, and compiler characteristics.
-AC_C_CONST
-AC_OBJEXT
-AC_EXEEXT
-
-AC_TYPE_SIZE_T
-AC_TYPE_OFF_T
-
-AC_MSG_CHECKING(for fpos_t)
-AC_EGREP_HEADER(fpos_t, stdio.h, AC_MSG_RESULT(yes),
-[
-    AC_MSG_RESULT(no)
-    AC_DEFINE(fpos_t, long, [Portable fpos_t type])
-])
-
-AC_MSG_CHECKING(for clock_t)
-AC_EGREP_HEADER(clock_t, time.h, AC_MSG_RESULT(yes),
-[
-    AC_MSG_RESULT(no)
-    AC_DEFINE(clock_t, long, [Portable clock_t type])
-])
-
-CHECK_HEADER_DEFINE(L_tmpnam, stdio.h,, AC_DEFINE(L_tmpnam, 20, 
-	[How long an array of chars must be to be passed to tmpnam]))
-
-
-CHECK_HEADER_DEFINE(INT_MAX, limits.h,,
-    CHECK_HEADER_DEFINE(MAXINT, limits.h,
-        AC_DEFINE(INT_MAX, MAXINT, [Maximum integer value]), 
-	AC_DEFINE(INT_MAX, 32767, [Maximum integer value])))
-
-AC_MSG_CHECKING(if struct stat contains st_ino)
-AC_TRY_COMPILE([#include <sys/stat.h>], [
-    struct stat st;
-    stat(".", &st);
-    if (st.st_ino > 0)
-        exit(0);
-], have_st_ino=yes, have_st_ino=no)
-AC_MSG_RESULT($have_st_ino)
-if test yes = "$have_st_ino"; then
-    AC_DEFINE(HAVE_STAT_ST_INO, 1, [Defined if stat struct contains st_ino])
-fi
-
-dnl Checks for library functions.
-AC_CHECK_FUNCS(fnmatch)
-AC_CHECK_FUNCS(strstr)
-AC_CHECK_FUNCS(stricmp)
-AC_CHECK_FUNCS(strnicmp)
-
-AC_CHECK_FUNCS(fgetpos, have_fgetpos=yes)
-
-dnl SEEK_SET should be in stdio.h, but may be in unistd.h on SunOS 4.1.x
-if test "$have_fgetpos" != yes ; then
-    CHECK_HEADER_DEFINE(SEEK_SET, stdio.h,,
-        CHECK_HEADER_DEFINE(SEEK_SET, unistd.h,,
-            AC_DEFINE(SEEK_SET, 0, [Seek from the beginning of file])))
-fi
-
-AC_CHECK_FUNCS(mkstemp, have_mkstemp=yes)
-if test "$have_mkstemp" != yes ; then
-    AC_CHECK_FUNCS(chmod)
-    if test "$tmpdir_specified" = yes ; then
-        AC_MSG_RESULT(use of tmpnam overrides temporary directory selection)
-    fi
-else
-    AC_MSG_CHECKING(directory to use for temporary files)
-    if test -z "$enable_tmpdir" -o "$enable_tmpdir" = no -o "$enable_tmpdir" = yes ;
-        then tmpdir=/tmp
-        else tmpdir="$enable_tmpdir"
-    fi
-    if test -d $tmpdir ; then
-        AC_MSG_RESULT($tmpdir)
-        AC_DEFINE_UNQUOTED(TMPDIR, "$tmpdir", [Directory for temporary files])
-    else
-        AC_MSG_WARN($tmpdir does not exist)
-    fi
-fi
-
-AC_CHECK_FUNCS(strerror opendir)
-AC_CHECK_FUNCS(clock times, break)
-AC_CHECK_FUNCS(remove, have_remove=yes,
-    CHECK_HEADER_DEFINE(remove, unistd.h,, AC_DEFINE(remove, unlink, [Portable remove])))
-
-AC_CHECK_FUNCS(truncate, have_truncate=yes)
-dnl === Cannot nest AC_CHECK_FUNCS() calls
-if test "$have_truncate" != yes  ; then
-    AC_CHECK_FUNCS(ftruncate, have_ftruncate=yes)
-    if test "$have_ftruncate" != yes ; then
-        AC_CHECK_FUNCS(chsize)
-    fi
-fi
-
-AC_CHECK_FUNCS(setenv, have_setenv=yes)
-dnl === Cannot nest AC_CHECK_FUNCS() calls
-if test "$have_setenv" != yes ; then
-    AC_CHECK_FUNCS(putenv, have_putenv=yes)
-    if test "$have_putenv" = yes ; then
-        AC_EGREP_HEADER(putenv, stdlib.h, have_putenv_prototype=yes)
-        if test "$have_putenv_prototype" = yes ; then
-            AC_MSG_CHECKING(putenv prototype)
-            AC_EGREP_HEADER([[^A-Za-zo-9_]putenv[   ]*\(.*const.*\)[    ]*;],
-                stdlib.h, AC_MSG_RESULT(correct),
-                [
-                    AC_MSG_RESULT(no const)
-                    AC_DEFINE(NON_CONST_PUTENV_PROTOTYPE, 1, 
-			[Defined if putenv accepts a non-const string])
-                ])
-        fi
-    fi
-fi
-
-dnl
-dnl if test yes = "$CYGWIN"; then with_posix_regex=no; fi
-if test no != "$with_posix_regex"; then
-    AC_CHECK_FUNCS(regcomp)
-    AC_MSG_CHECKING(if regcomp works)
-    AC_TRY_RUN([
-#include <sys/types.h>
-#include <regex.h>
-main() {
-    regex_t patbuf;
-    exit (regcomp (&patbuf, "/hello/", 0) != 0);
-}],regcomp_works=yes,regcomp_works=no,AC_DEFINE(CHECK_REGCOMP, 1, [Defined if regcomp works]))
-    AC_MSG_RESULT($regcomp_works)
-    if test yes != "$regcomp_works"; then
-        AC_DEFINE(REGCOMP_BROKEN, 1, [Defined if regcomp does not work])
-    fi
-fi
-
-dnl Checks for missing prototypes
-dnl -----------------------------
-AC_CHECKING(for missing prototypes)
-
-AC_DEFUN(CHECK_PROTO, [AC_EGREP_HEADER([[^A-Za-z0-9_]$1([   ]+[A-Za-z0-9_]*)?\(], $2,, 
-	AC_DEFINE(patsubst([NEED_PROTO_NAME], [NAME], translit($1, [a-z], [A-Z])), 1, 
-		[Whether a prototype for $1 is needed]) 
-	AC_MSG_RESULT(adding prototype for $1))])
-
-if test "$have_remove" = yes ; then
-    CHECK_PROTO(remove, stdio.h)
-else
-    CHECK_PROTO(unlink, unistd.h)
-fi
-CHECK_PROTO(malloc, stdlib.h)
-CHECK_PROTO(getenv, stdlib.h)
-CHECK_PROTO(stat,   sys/stat.h)
-CHECK_PROTO(lstat,  sys/stat.h)
-if test "$have_fgetpos" = yes ; then
-    CHECK_PROTO(fgetpos, stdio.h)
-fi
-if test "$have_truncate" = yes ; then
-    CHECK_PROTO(truncate, unistd.h)
-fi
-if test "$have_ftruncate" = yes ; then
-    CHECK_PROTO(ftruncate, unistd.h)
-fi
-
-dnl ========== ctags stuffs ends =======================================
-dnl =====================================================================
-
 AC_PROG_CXX
 AC_STDC_HEADERS
 AM_PROG_LIBTOOL
@@ -281,16 +85,6 @@ PKG_CHECK_MODULES(GDL_DEPENDENCIES,
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
-# orbit-idl
-ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
-AC_SUBST(ORBIT_IDL)
-
-# idl directories
-LIBBONOBO_IDL_DIR="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
-AC_SUBST(LIBBONOBO_IDL_DIR)
-BONOBO_ACTIVATION_IDL_DIR="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
-AC_SUBST(BONOBO_ACTIVATION_IDL_DIR)
-
 # marshal and enum generators
 GLIB_GENMARSHAL="`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`"
 AC_SUBST(GLIB_GENMARSHAL)
@@ -319,7 +113,6 @@ AC_SUBST(gdl_images_dir)
 AC_OUTPUT([
 Makefile
 gdl/Makefile
-idl/Makefile
 po/Makefile.in 
 gdl.spec
 gdl-1.0.pc
